--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -1051,6 +1051,7 @@
 				<img src="../../webpng/Attackpage/Part4BG-Mobile.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg5">
+				<img src="../../webpng/Attackpage/Part5BG.png" width="100%" alt=""/>
 			</div>
 
 		</div>
