--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -440,7 +440,7 @@
 									<p>隨著地球越來越熱，動植物為了生存只能往更高緯度的地方生活<br>在2001 到2008年間<br>歐洲17座山脈上66個山頂，植物有向高海拔遷移之趨勢<br>動物每十年北移 6.1 km <br>除了影響棲地以外<br>原本僅生存在高山的物種，因為已無退路，將有滅絕的可能</p>	
 								</div>
 								
-								<div class="BA">
+								<div class="SDCBA">
 					   				<img src="../../webpng/Attackpage/BackArrow.png" width="100%"  alt=""/> 
 								</div>
 							</div>
