--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -466,7 +466,7 @@
 							</div>
 							
 							<div class="OACpart1"></div>
-							<div class="OACpart1Title">
+							<div class="part1Title">
 									<h2>目前海洋平均每天吸收2400萬頓的二氧化碳</h2>
 							</div>
 
