--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -971,6 +971,11 @@
 					<img src="../../Animation/wheel.gif" width="100%"  alt=""/> 
 				</div>
 
+			</div>
+		</div>
+		<div class="section">
+			<div class="view4-1Mobile" >
+				
 
 			</div>
 		</div>
@@ -1048,7 +1053,10 @@
 				<img src="../../webpng/Attackpage/Part4BG.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-1Mobile">
-				<img src="../../webpng/Attackpage/Part4BG-MobileNew.png" width="100%" alt=""/> 
+				<img src="../../webpng/Attackpage/Part4BG-Mobile.png" width="100%" alt=""/> 
+			</div>
+			<div class="bg4-2Mobile">
+				<img src="../../webpng/Attackpage/Part4-1BG.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg5">
 				<img src="../../webpng/Attackpage/Part5BG.png" width="100%" alt=""/>
