--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -975,8 +975,8 @@
 		</div>
 		<div class="section">
 			<div class="view4-1Mobile" >
-				<div class="MainMenu" >
-					<div class="Backbutton" style="cursor:hand">
+				<div class="MainMenu-Mobile" >
+					<div class="Backbutton-Mobile" style="cursor:hand">
 				    	<img src="../../webpng/Attackpage/Backbutton.png" width="100%"  alt=""/> 
 					</div>
 					
