--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -134,7 +134,7 @@
 				</a>
 				
 				<!-- for mobile -->
-				<a href="#menu" class="Boxoutside-Mobile"  >
+				<a href="OutdoorM" class="Boxoutside-Mobile"  >
 				  		  
 					<img src="../../webpng/Attackpage/Box.png" width="100%"  alt=""/> 
 					<div class="Outsidetitle-Mobile">
@@ -974,7 +974,7 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view4-1Mobile" >
+			<div class="view4-1Mobile" id="OutdoorM">
 				<div class="MainMenu-Mobile" >
 					<div class="Backbutton-Mobile" style="cursor:hand">
 				    	<img src="../../webpng/Attackpage/Backbutton.png" width="100%"  alt=""/> 
