--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -16,8 +16,8 @@
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 	
 	<script>
-		if(isMobileDevice = true) {
-		window.location = '../AttackPage/AttackPage.m.html';
+		if(isMobileDevice = 'true') {
+			window.location = '../AttackPage/AttackPage.m.html';
 		}
 	</script>
 
