--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -11,6 +11,12 @@
 	<link href="AtackPagePart4.css" rel="stylesheet" type="text/css">
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
+	<script src="DeviceCheck.js"></script>
+	<script>
+		if(isMobileDevice = 'false') {
+			window.location = '../AttackPage/AttackPage.m.html';
+		}
+	</script>
 	<script src="jquery-1.8.3.min.js"></script>
 <!--
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
