--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -16,7 +16,7 @@
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 	
 	<script>
-		if(isMobileDevice = 'true') {
+		while(isMobileDevice = 'true') {
 			window.location = '../AttackPage/AttackPage.m.html';
 		}
 	</script>
