--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -14,7 +14,7 @@
 	<script src="DeviceCheck.js"></script>
 	<script>
 		while(isMobileDevice = 'false') {
-			window.location = '../AttackPage/AttackPage.m.html';
+			window.location = '../AttackPage/AttackPage.html';
 		}
 	</script>
 	<script src="jquery-1.8.3.min.js"></script>
