--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -13,7 +13,7 @@
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="DeviceCheck.js"></script>
 	<script>
-		while(isMobileDevice = 'false') {
+		while(isMobileDevice = false) {
 			window.location = '../AttackPage/AttackPage.html';
 		}
 	</script>
