--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -11,8 +11,7 @@
 	<link href="AtackPagePart4.css" rel="stylesheet" type="text/css">
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
-	<script src="DeviceCheck.js"></script>
-	<script>
+	<script src="DeviceCheck.js">
 		while(isMobileDevice = false) {
 			window.location = '../AttackPage/AttackPage.html';
 		}
