--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -12,7 +12,7 @@
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="DeviceCheck.js">
-		while(isMobileDevice = false) {
+		while(isMobileDevice = 1) {
 			window.location = '../AttackPage/AttackPage.html';
 		}
 	</script>
