--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -12,7 +12,11 @@
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
-	<script src="DeviceCheck.js"></script>
+	<script src="DeviceCheck.js">
+		while(isMobileDevice = 0) {
+			window.location = '../AttackPage/AttackPage.m.html';
+		}
+	</script>
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 	
 
