--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -11,11 +11,7 @@
 	<link href="AtackPagePart4.css" rel="stylesheet" type="text/css">
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
-	<script src="DeviceCheck.js">
-		while(isMobileDevice = 0) {
-			window.location = '../AttackPage/AttackPage.html';
-		}
-	</script>
+	<script src="DeviceCheck.js"></script>
 	<script src="jquery-1.8.3.min.js"></script>
 <!--
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
