--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -1490,7 +1490,9 @@
 			<div class="bg2">
 				<img src="../../webpng/Attackpage/Part2BG.png" width="100%"  alt=""/> 
 			</div>
-			
+			<div class="bg3">
+				<img src="../../webpng/Attackpage/Part3BG.png" width="100%"  alt=""/> 
+			</div>
 			<div class="bg3-1Mobile">
 				<img src="../../webpng/Attackpage/Part3-1BG.png" width="100%"  alt=""/> 
 			</div>
