--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -1493,7 +1493,7 @@
 			<div class="bg3">
 				<img src="../../webpng/Attackpage/Part3BG.png" width="100%"  alt=""/> 
 			</div>
-			<div class="bg3-1Mobile">
+			<div class="bg3-1">
 				<img src="../../webpng/Attackpage/Part3-1BG.png" width="100%"  alt=""/> 
 			</div>
 			<div class="bg4">
