--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -238,12 +238,11 @@
 
 		<div class="section">
 			<div class="view4" >
-				
-				<div class="Disaster-Mobile" >
+				<div class="Disaster" >
 					<h1>工業革命至今帶來的災難</h1>
 				</div>
 				
-				<div class="Steam-Mobile">
+				<div class="Steam">
 					<img src="../../Animation/wheel.gif" width="100%"  alt=""/> 
 				</div>
 
