--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -237,7 +237,7 @@
 		</div>
 
 		<div class="section">
-			<div class="view4" >
+			<div class="view4" id="Outdoor">
 				<div class="Disaster" >
 					<h1>工業革命至今帶來的災難</h1>
 				</div>
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view4-1Mobile" id="Outdoor">
+			<div class="view4-1Mobile" >
 				<div class="MainMenu-Mobile" >
 					<div class="Backbutton-Mobile" style="cursor:hand">
 				    	<img src="../../webpng/Attackpage/Backbutton.png" width="100%"  alt=""/> 
