--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -249,9 +249,9 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view4-1Mobile" >
-				<div class="MainMenu-Mobile" >
-					<div class="Backbutton-Mobile" style="cursor:hand">
+			<div class="view4-1" >
+				<div class="MainMenu" >
+					<div class="Backbutton" style="cursor:hand">
 				    	<img src="../../webpng/Attackpage/Backbutton.png" width="100%"  alt=""/> 
 					</div>
 					
