--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -271,7 +271,7 @@
 								<h1>物種多樣性減少</h1>
 							</div>
 							<div class="SDCSub">
-								<h2>全世界有1/5的植物面臨滅絕威脅，<br>全世界大約38萬物種存在滅絕風險</h2>
+								<h2>全世界有1/5的植物面臨滅絕威脅，<br>甚至大約38萬物種存在滅絕風險</h2>
 							</div>
 							<div class="SDCpart1"></div>
 							
