--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -11,6 +11,7 @@
 	<link href="AtackPagePart4.m.css" rel="stylesheet" type="text/css">
 	<link href="AtackPagePart5.m.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
+	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 	
 	<script src="jquery-1.8.3.min.js"></script>
 	
