--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -256,7 +256,7 @@
 					</div>
 					
 					<div class="Menu" data-aos="slide-right" data-aos-duration="500" id="Menu"  style="cursor:hand">
-						<a href="#Menu" class="SpeciesDiversity" value="close" >
+						<button class="SpeciesDiversity" value="close" href="#Menu">
 							<span class="ButtonTitle">
 								<h1>物種多樣性減少</h1>
 							</span>
@@ -264,7 +264,7 @@
 								<p>全世界有1/5的職務面臨滅絕威脅大約38萬種植物存在滅絕風險</p>
 							</span>
 							
-						</a>
+						</button>
 						<div class="SpeciesDiversityContent">
 							<div class="SDCBG"></div>
 							<div class="SDCMain">
