--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -256,7 +256,7 @@
 					</div>
 					
 					<div class="Menu" data-aos="slide-right" data-aos-duration="500" id="Menu"  style="cursor:hand">
-						<button class="SpeciesDiversity" value="close" href="#Menu">
+						<button class="SpeciesDiversity" value="close" >
 							<span class="ButtonTitle">
 								<h1>物種多樣性減少</h1>
 							</span>
