--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -806,7 +806,7 @@
 								</div>
 								
 								<div class="ESCpart2Contenttext" data-aos="fade right">
-									<p>國際勞工組織(ILO)2019年7月發佈的報告表示，<br>氣候的異常將對室外作業較多的建築業和農業産生嚴重影響，<br>發展中國家無可避免首當其衝。<br>報告預估，2030年之前全球的勞動時間將比目前平均減少2%，<br>其中南亞（5.3%）和西非（4.8%）等地的減幅較大。<br>研究顯示，溫度24到26度有一定的程度會降低勞工的工作能力。<br>而當溫度上升到33-34度時，<br>勞工在操作中等強度工作時的工作能力會降低<font color="#ffa642">50％</font>。<br>長期暴露在極高的溫度下會導致心臟疾病，嚴重時甚至可能致命。<br>然而，保守估計顯示，除了假設全球溫度長期下來不會增加超過1.5度，<br>且建立在農業和建築業的工作可以在陰涼處執行。<br>而這個假設是建立在少數的熱帶國家一天有40%是陰天，<br>而且在有些個案上，尤其是那些維持生計的農業，<br>可以常常移動他的作物當他不需要這麼熱的時候。<br>如果不是，那我們假設這些農業和建築業都是需要在烈日下工作，<br>而他們預估全球的工作時數會在2030年時損失<font color="#ffa642">3.8%</font>，<br>相當於一億三千六百萬個全職工作的時間。</p>	
+									<p>國際勞工組織(ILO)2019年7月發佈的報告表示，<br>氣候的異常將對室外作業較多的建築業和農業産生嚴重影響，<br>發展中國家無可避免首當其衝。<br>報告預估，2030年之前全球的勞動時間將比目前平均減少2%，<br>其中南亞（5.3%）和西非（4.8%）等地的減幅較大。<br>研究顯示，溫度24到26度有一定的程度會降低勞工的工作能力。<br>而當溫度上升到33-34度時，<br>勞工在操作中等強度工作時的工作能力會降低<font color="#ffa642">50％</font>。<br>長期暴露在極高的溫度下會導致心臟疾病，嚴重時甚至可能致命。<br>然而，保守估計顯示，<br>除了假設全球溫度長期下來不會增加超過1.5度，<br>且建立在農業和建築業的工作可以在陰涼處執行。<br>而這個假設是建立在少數的熱帶國家一天有40%是陰天，<br>而且在有些個案上，尤其是那些維持生計的農業，<br>可以常常移動他的作物當他不需要這麼熱的時候。<br>如果不是，那我們假設這些農業和建築業都是需要在烈日下工作，<br>而他們預估全球的工作時數會在2030年時損失<font color="#ffa642">3.8%</font>，<br>相當於一億三千六百萬個全職工作的時間。</p>	
 								</div>
 								
 								<div class="ESCpart3Contenttext" data-aos="fade right">
