--- a/網頁/AttackPage/AttackPage.m.html
+++ b/網頁/AttackPage/AttackPage.m.html
@@ -835,7 +835,7 @@
 				<div class="rectangle">
 					<div class="Part1">
 						<div class="CO2temp">
-							<p>二氧化碳濃度＆地球溫度<br><a href="https://www.climate.gov/news-features/understanding-climate/climate-change-atmospheric-carbon-dioxide" target="_blank" style="text-decoration:none; color:#FFFFFF;"  title="暖化的科學(3):二氧化碳與暖化">Climate.gov</a></p>
+							<p>二氧化碳濃度＆地球溫度<br><a href="https://www.climate.gov/news-features/understanding-climate/climate-change-atmospheric-carbon-dioxide" target="_blank" style="text-decoration:none; color:#FFFFFF;"  >Climate.gov</a></p>
 							
 						</div>
 						<div class="IceMelting">
