--- a/網頁/ConvertPage/ConvertPage.html
+++ b/網頁/ConvertPage/ConvertPage.html
@@ -447,7 +447,9 @@
 		</div>
 		<div class="allpg">			
 			<div class="bg1">
+				<div class="absolute-bg">
 					<img src="../../webpng/ConvertPage/P1BG.png" width="1920" height="1080" alt=""/>
+				</div>
 				<div class="Bottle">
 					<img src="../../webpng/ConvertPage/Bottle.png" width="100%"  alt=""/> 
 				</div>
@@ -455,7 +457,9 @@
 					  <div class="fog-img fog-img-first"></div>
 					  <div class="fog-img fog-img-second"></div>
 					</div>
-				
+					<div class="Mask">
+				    	<img src="../../webpng/ConvertPage/MASK.png" width="100%"  alt=""/> 
+				  	</div>
 				  
 		  	</div>
 			<div class="bg2">
