--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -442,9 +442,9 @@
 			</div>
 		</div>
 		<div class="allpg">			
-			<div class="bg1">
+			<div class="bgAll">
 				<div class="absolute-bg">
-					<img src="../../webpng/ConvertPage/P1BG.png" width="100%"  alt=""/>
+					<img src="../../webpng/ConvertPage/ConvertAllBG.png" width="100%"  alt=""/>
 				</div>
 				<div class="Bottle">
 					<img src="../../webpng/ConvertPage/Bottle.png" width="100%"  alt=""/> 
@@ -458,18 +458,7 @@
 				  	</div>
 				  
 		  	</div>
-			<div class="bg2">
-					<img src="../../webpng/ConvertPage/P2BG-mobile.png" width="100%" alt=""/>
-			</div>
-			<div class="bg3">
-					<img src="../../webpng/ConvertPage/P3BG-mobile.png" width="100%"  alt=""/> 
-			</div>
-			<div class="bg4">
-					<img src="../../webpng/ConvertPage/P4BG-mobile.png" width="100%"  alt=""/> 
-			</div>
-			<div class="bg5">
-					<img src="../../webpng/ConvertPage/P4BG.png" width="100%"  alt=""/> 
-			</div>
+			
 		</div>
 	</div>
 	<script src="pullupcard.js"></script>
