--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -359,8 +359,8 @@
 			<div class="view3">
 				
 				<div class="Ranking">
-					<div class="CalResultText" id="result">
-				
+					<div class="CalResult"  data-aos="fade-left"  data-aos-once="true" data-aos-delay="1000">
+						<div class="CalResultText" id="result"></div>
 					</div>
 					<div class="Co2Evil">
 						<div class="MedalsEvil">
