--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -363,18 +363,20 @@
 						<div class="CalResultText" id="result"></div>
 					</div>
 					<div class="Co2Evil">
+						<div class="rightline"></div>
 						<div class="MedalsEvil">
 							<img src="../../webpng/ConvertPage/惡魔.png" width="50%"  alt=""/>
 							<div class="EvilText">
 								<p>重碳惡魔</p>
 							</div>
 						</div>
-						<div class="MidlineEvil"></div>
+						<div class="Midline"></div>
 						<div class="SuggestEvil">
 							<p>太可怕了，<br>你一天所製造的碳排放<br>需要一棵樹為你吸碳一年半<br>快快跟著我們學習減碳新招吧！</p>
 						</div>
 					</div>
 					<div class="Co2Normal">
+						<div class="rightline"></div>
 						<div class="MedalsNormal">
 							<img src="../../webpng/ConvertPage/平民.png" width="50%"  alt=""/>
 							<div class="NormalText">
@@ -382,21 +384,20 @@
 							 </div>
 
 						 </div>
-						<div class="MidlineNormal">
-							
-					  	</div>
+						<div class="Midline"></div>
 						<div class="SuggestNormal">
 							<p>還不錯啦！<br>但能夠做得更好，<br>趕緊點開我們的動畫<br>認識其他減碳方式吧！</p>
 						</div>
 					</div>
 					<div class="Co2Angel">
+						<div class="rightline"></div>
 						<div class="MedalsAngel">
 							<img src="../../webpng/ConvertPage/天使.png" width="50%" alt=""/>
 							<div class="AngelText">
 								<p>輕碳天使</p>
 							</div>							
 						</div>
-						<div class="MidlineAngel"></div>
+						<div class="Midline"></div>
 						<div class="SuggestAngel">
 							<p>做得太好了！<br>因為有你，地球獲得了喘息的空間<br>趕快把你的減碳小撇步<br>分享給其他人吧！</p>
 						</div>
