--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -359,7 +359,7 @@
 			<div class="view3">
 				
 				<div class="Ranking">
-					<div class="CalResult"  data-aos="fade-left"  data-aos-once="true" data-aos-delay="1000">
+					<div class="CalResult" >
 						<div class="CalResultText" id="result"></div>
 					</div>
 					<div class="Co2Evil">
