--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -372,7 +372,7 @@
 						</div>
 						<div class="Midline"></div>
 						<div class="SuggestEvil">
-							<p>太可怕了，<br>你一天所製造的碳排放<br>需要一棵樹為你吸碳一年半<br>快快跟著我們學習減碳新招吧！</p>
+							<p>太可怕了！<br>你一天所製造的碳排放<br>需要一棵樹為你吸碳一年半<br>快快跟著我們學習減碳新招吧！</p>
 						</div>
 					</div>
 					<div class="Co2Normal">
@@ -399,7 +399,7 @@
 						</div>
 						<div class="Midline"></div>
 						<div class="SuggestAngel">
-							<p>做得太好了！<br>因為有你，地球獲得了喘息的空間<br>趕快把你的減碳小撇步<br>分享給其他人吧！</p>
+							<p>做得太好了！<br>因為有你，<br>地球獲得了喘息的空間<br>趕快把你的減碳小撇步<br>分享給其他人吧！</p>
 						</div>
 					</div>
 					
