--- a/網頁/ConvertPage/ConvertPage.html
+++ b/網頁/ConvertPage/ConvertPage.html
@@ -6,6 +6,7 @@
 	<link href="ConvertPageAll.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
+	<script src="DeviceCheck.js"></script>
 	
 
 </head>
