--- a/網頁/ConvertPage/ConvertPage.m.html
+++ b/網頁/ConvertPage/ConvertPage.m.html
@@ -205,7 +205,7 @@
 					<button class="SendOut">送出</button>
 				</div>
 				<div class="Cart" data-aos="fade-left"  data-aos-once="true" data-aos-delay="1000">
-					<table border="1">
+					<table style="border:1px solid #000;"  >
 				  		<tr>
 							<td>
 								<div class="Img CEgg">
