--- a/網頁/ConvertPage/ConvertPage.html
+++ b/網頁/ConvertPage/ConvertPage.html
@@ -7,6 +7,7 @@
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
 	<script src="DeviceCheck.js"></script>
+	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 	
 
 </head>
