--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
 					<t>參考資料</t>
 				</div>
 				<div class="rectangle">
-					<div class="CO2pro">
+					<div class="part1">
+						<div class="CO2pro">
 						<t>二氧化碳的特性</t>
 						<div class="inforfrom">
 							<a href="https://zh.wikipedia.org/wiki/%E4%BA%8C%E6%B0%A7%E5%8C%96%E7%A2%B3" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
@@ -633,16 +634,19 @@
 							<a href="https://zh.wikipedia.org/wiki/二氧化碳" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
 						</div>
 					</div>
-					<div class="CO2role">
-						<t>二氧化碳在環境中扮演的角色</t>
-						<div class="inforfrom">
-							<a href="https://scitechvista.nat.gov.tw/c/sgZw.htm" target="_blank" style="text-decoration:none; color:#FFFFFF;"  title="暖化的科學(3):二氧化碳與暖化">暖化的科學(3)：二氧化碳與暖化</a><p></p>
-							<a href="https://tw.answers.yahoo.com/question/index?qid=20100227000010KK10449" target="_blank" style="text-decoration:none; color:#FFFFFF;">yahoo!知識+ ─ 請問二氧化碳對地球有什麼影響</a><p></p>
-							<a href="https://zh.wikipedia.org/wiki/%E4%BA%8C%E6%B0%A7%E5%8C%96%E7%A2%B3" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
-
-						</div>
-
 					</div>
+					<div class="part2">
+						<div class="CO2role">
+						<t>二氧化碳在環境中扮演的角色</t>
+							<div class="inforfrom">
+								<a href="https://scitechvista.nat.gov.tw/c/sgZw.htm" target="_blank" style="text-decoration:none; color:#FFFFFF;"  title="暖化的科學(3):二氧化碳與暖化">暖化的科學(3)：二氧化碳與暖化</a><p></p>
+								<a href="https://tw.answers.yahoo.com/question/index?qid=20100227000010KK10449" target="_blank" style="text-decoration:none; color:#FFFFFF;">yahoo!知識+ ─ 請問二氧化碳對地球有什麼影響</a><p></p>
+								<a href="https://zh.wikipedia.org/wiki/%E4%BA%8C%E6%B0%A7%E5%8C%96%E7%A2%B3" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
+
+							</div>
+						</div>
+					</div>
+					
 
 				</div>
 			</div>
