--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 					<t>參考資料</t>
 				</div>
 				<div class="rectangle">
-					<div class="part1">
+					<div class="Part1">
 						<div class="CO2pro">
 						<t>二氧化碳的特性</t>
 						<div class="inforfrom">
@@ -635,7 +635,7 @@
 						</div>
 					</div>
 					</div>
-					<div class="part2">
+					<div class="Part2">
 						<div class="CO2role">
 						<t>二氧化碳在環境中扮演的角色</t>
 							<div class="inforfrom">
