--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>減碳方法</title>
 
-	<link href="WayPageAll.css" rel="stylesheet" type="text/css">
+	<link href="WayPageAll.m.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
 
@@ -202,7 +202,7 @@
 				<img src="../../webpng/WayPage/Part2BG-2.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3">
-					<img src="../../webpng/WayPage/Part3BG.png" width="100%"  alt=""/> 
+					<img src="../../webpng/WayPage/Part3BG-Mobile.png" width="100%"  alt=""/> 
 			</div>
 
 		</div>
