--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -7,6 +7,8 @@
 	<link href="WayPageAll.m.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
+	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
+
 
 	<script>
 		AOS.init({
