Waypage part3 BGFIX

--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -188,7 +188,7 @@
 				<img src="../../webpng/WayPage/Part2BG-2.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3">
-					<img src="../../webpng/WayPage/Part3BG-Mobile.png" width="100%"  alt=""/> 
+					<img src="../../webpng/WayPage/Part3BG.png" width="100%"  alt=""/> 
 			</div>
 
 		</div>
