--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view2">
+			<div class="view2" id="view2">
 				
 				<div class="FoodAnimation" data-aos="fade-up" data-aos-once="true" data-aos-delay="1500">
 			  	  	<div class="FATitle" >
