--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -56,7 +56,7 @@
 				<a class="MenuBtn Ab" href="../AboutUsPage/AboutUsPage.html" style="text-decoration: none ; ">關於我們</a>	
 					
 			</span>	
-			<div class="view1" id="view1">
+			<div class="view1" id="AnimationBasic">
 				
 
 				<div class="P1Title">
