--- a/網頁/WayPage/WayPage.html
+++ b/網頁/WayPage/WayPage.html
@@ -5,8 +5,10 @@
 	<title>減碳方法</title>
 
 	<link href="WayPageAll.css" rel="stylesheet" type="text/css">
+	
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
+	<script src="DeviceCheck.js"></script>
 	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 
 
