--- a/網頁/MonitorPage/MonitorPage.html
+++ b/網頁/MonitorPage/MonitorPage.html
@@ -125,6 +125,12 @@
 					<a class="active" href="../AboutUsPage/AboutUsPage.html" style="color: white;text-decoration: none">關於我們</a>	
 				</div>
 				
+				<div class="Dots">
+					<div class="dot1"></div>
+					<div class="dot2"></div>
+					<div class="dot3"></div>
+					<div class="dot4"></div>
+				</div>
 
 		  </div>
 		</div>
