--- a/網頁/AboutUsPage/AboutUsPage.html
+++ b/網頁/AboutUsPage/AboutUsPage.html
@@ -43,15 +43,15 @@
 			<span class="MenuContent">
 					<a class="MenuBtn" href="index.html" style="text-decoration: none; ">成因</a>
 						<br>
-				  	<a class="MenuBtn" href="網頁/AttackPage/AttackPage.html" style="text-decoration: none">威脅</a>
+				  	<a class="MenuBtn" href="../AttackPage/AttackPage.html" style="text-decoration: none">威脅</a>
 						<br>
-					<a class="MenuBtn" href="網頁/ConvertPage/ConvertPage.html" style="text-decoration: none">換算</a>
+					<a class="MenuBtn" href="../ConvertPage/ConvertPage.html" style="text-decoration: none">換算</a>
 						<br>
-					<a class="MenuBtn" href="網頁/WayPage/WayPage.html" style="text-decoration: none ">方法</a>
+					<a class="MenuBtn" href="../WayPage/WayPage.html" style="text-decoration: none ">方法</a>
 						<br>
-					<a class="MenuBtn" href="網頁/MonitorPage/MonitorPage.html" style="text-decoration: none">環境監測儀</a>
+					<a class="MenuBtn" href="../MonitorPage/MonitorPage.html" style="text-decoration: none">環境監測儀</a>
 						<br>
-					<a class="MenuBtn Ab" href="網頁/AboutUsPage/AboutUsPage.html" style="text-decoration: none ; ">關於我們</a>	
+					<a class="MenuBtn Ab" href="../AboutUsPage/AboutUsPage.html" style="text-decoration: none ; ">關於我們</a>	
 					
 			</span>	
 			<div class="view1">
