--- a/網頁/AboutUsPage/AboutUsPage.m.html
+++ b/網頁/AboutUsPage/AboutUsPage.m.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="P1MidLine"></div>
 				<div class="P1Content">
-					<p>全球暖化日益嚴重，我們將從「二氧化碳」進行切入，<br>從二氧化碳的「成因」開始，帶入自工業革命以來<br>因全球暖化造成的氣候災難，並設計了「碳排計算機」<br>讓使用者可以用較為趣味的方式去了解到<br>其實我們在無形之間製造出非常可觀的二氧化碳。<br><br>網頁上也有在生活中即可執行的減碳方法，透過知識<br>型動畫去做呈現，抓住受眾目光。「環境檢測儀」的<br>理念更讓我們用數據化的方式了解環境因子，並且期望<br>能夠達到綠能生活的願景。</p>
+					<p>全球暖化日益嚴重，我們將從「二氧化碳」<br>進行切入，從二氧化碳的「成因」開始，<br>帶入自工業革命以來因全球暖化<br>造成的氣候災難，並設計了「碳排計算機」<br>讓使用者可以用較為趣味的方式<br>了解到其實我們在無形之間<br>製造出非常可觀的二氧化碳。<br><br>網頁上也有在生活中即可執行的減碳方法，<br>透過知識型動畫去做呈現，抓住受眾目光。<br>「環境檢測儀」的理念更讓我們<br>用數據化的方式了解環境因子，並且期望<br>能夠達到綠能生活的願景。</p>
 				</div>
 
 				<div class="bar">
