--- a/網頁/AboutUsPage/AboutUsPage.html
+++ b/網頁/AboutUsPage/AboutUsPage.html
@@ -6,6 +6,7 @@
 
 	<link href="AboutUsPage.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
+	<script src="DeviceCheck.js"></script>
 	
 	<script>
 		AOS.init({
