Waypage rock fix

--- a/網頁/WayPage/WayPage.m.html
+++ b/網頁/WayPage/WayPage.m.html
@@ -168,7 +168,7 @@
 		<div class="allpg">
 			
 			<div class="Rock">
-				<img src="../../webpng/WayPage/Rock-N.png" width="100%"  alt=""/> 
+				<img src="../../webpng/WayPage/Rock.png" width="100%"  alt=""/> 
 			</div>
 			<div class="Halo">
 			    	<img src="../../webpng/WayPage/Halo.png" width="100%"  alt=""/> 
