--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link href="HomePage.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<link href="part2.css" rel="stylesheet" type="text/css">
+	<link href="part3.css" rel="stylesheet" type="text/css">
+	<link href="part4.css" rel="stylesheet" type="text/css">
+	<link href="part5.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
 	<!--<script src="jquery.fullPage.js"></script>
 	<script src="jquery.fullPage.css"></script>
